--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,8 @@
 martcal changelog
 =================
 
-Version 0.1.0-beta (Unreleased)
--------------------------------
+Version 0.1.0 (25th June 2019)
+------------------------------
 
 Initial release
 
